--- a/htdocs/CurrencyExchange.html
+++ b/htdocs/CurrencyExchange.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html ng-app="CurrencyExchange">
     <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>TLD Currency Converter</title>
     <style>
     </style>
@@ -33,7 +35,7 @@
                 </tr>
                 <tr>
                   <td><label>Amounts:</label></td>
-                  <td><textarea ng-model="Ctrl.UserAmounts" ng-change="Ctrl.UpdateAmounts()"></textarea></td>
+                  <td><textarea ng-model="Ctrl.UserAmounts" ng-change="Ctrl.UpdateAmounts()" rows="10" cols="50"></textarea></td>
                 </tr>
             </table>
             <datalist id="Currencies">
