--- a/htdocs/CurrencyExchange.html
+++ b/htdocs/CurrencyExchange.html
@@ -5,11 +5,9 @@
     <title>TLD Currency Converter</title>
     <style>
     </style>
-    <script src="/scripts/papaparse.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
-    <script src="/scripts/CurrencyExchange/CurrencyExchange.module.js"></script>
-    <script src="/scripts/CurrencyExchange/services/ExchangeRate.service.js"></script>
-    <script src="/scripts/CurrencyExchange/controllers/CurrencyExchange.controller.js"></script>
+    <script src="/scripts/papaparse.min.js"></script>
+    <script src="/scripts/CurrencyExchange.min.js"></script>
     </head>
     <body ng-controller="CurrencyExchangeController as Ctrl">
     <div ng-show="Ctrl.CurrencyState == 'initialized'">
@@ -46,7 +44,7 @@
                 <option ng-repeat="currency in Ctrl.Currencies" value="{{currency}}">
             </datalist>
             <hr>
-            <label ng-show="myForm.$valid && Ctrl.ExchangeRate">ExchangeRate is {{Ctrl.ExchangeRate}}</label>
+            <label ng-show="myForm.$valid && Ctrl.ExchangeRate">ExchangeRate is {{Ctrl.ExchangeRate|number:2}}</label>
             <label ng-show="myForm.$valid && !Ctrl.ExchangeRate">ExchangeRate is not available </label>
             <table ng-show="Ctrl.ExchangeRate != null && Ctrl.Amounts.length != 0" border="1">
                 <tr>
@@ -54,8 +52,8 @@
                     <th>{{Ctrl.CurrencyTo}}</th>
                 </tr>
                 <tr ng-repeat='amount in Ctrl.Amounts track by $index'>
-                    <th>{{amount}}</th>
-                    <th>{{amount * Ctrl.ExchangeRate}}</th>
+                    <td>{{amount|number:2}}</td>
+                    <td>{{(amount * Ctrl.ExchangeRate)|number:2}}</td>
                 </tr>
             </table>
         </form>
